# chariot

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  Makefile  Makefile.common  README.md  Setup.hs  bochsrc  bt.txt  build.sh  config.mk  grub.cfg  iconfont.css  kernel.ld  out.fnt  package.yaml  run.sh  stack.yaml  sync.sh  user.ld  windowserver.ipc
arch/riscv/: CMakeLists.txt  Kconfig  arch.cpp  config.cmake  dis.cpp  kernel.ld  lowlevel.S  lowlevel.c  lowlevel.cpp  main.cpp  mm.cpp  mmode.cpp  paging_impl.h  plic.cpp  sbi.cpp  signal.cpp  start.cpp  time.cpp  trap.cpp  uart.cpp  user.ld
drivers/: CMakeLists.txt  Makefile  majors.h
drivers/RTL8139/: CMakeLists.txt  RTL8139.cpp  RTL8139.h
drivers/ac97/: CMakeLists.txt  ac97.cpp
drivers/ahci/: CMakeLists.txt  ahci.cpp  ahci.h  sata.cpp
drivers/ata/: CMakeLists.txt  Makefile  ata.cpp  ata.h  ata_piix.cpp
drivers/bus/: CMakeLists.txt
drivers/char/: CMakeLists.txt  generic.cpp
drivers/com/: serial.cpp
drivers/desktop/: desktop.cpp  loadbmp.cpp  loadbmp.h  window.cpp
drivers/e1000/: CMakeLists.txt  e1000.cpp  e1000.h
drivers/floppy/: CMakeLists.txt  floppy.cpp
drivers/kbd/: kbd.cpp
drivers/mouse/: mouse.cpp
drivers/nvme/: CMakeLists.txt  ctrl.cpp  nvme.bits.h  nvme.cpp  nvme.h  spec_notes.txt
drivers/ps2/: CMakeLists.txt  kbd.cpp  mouse.cpp
drivers/sb16/: CMakeLists.txt  sb16.cpp
drivers/serial/: CMakeLists.txt  ns16550a.cpp  sifive.cpp
drivers/spi/: CMakeLists.txt  sifive.cpp
drivers/usb/: CMakeLists.txt  xhci.cpp
drivers/vga/: CMakeLists.txt  font.ckf.h  svga.cpp  vga.cpp  vga_font_raw.h  xterm_colors.h
drivers/virtio/: CMakeLists.txt  disk.cpp  gpu.cpp  input.cpp  internal.h  virtio.cpp  virtio.h
drivers/vmware/: CMakeLists.txt  vmware_backdoor.cpp
kernel/: CMakeLists.txt  Makefile  awaitfs.cpp  block.cpp  console.cpp  cpu.cpp  debug.cpp  device.cpp  devicetree.cpp  elfloader.cpp  emx.cpp  fifo_buf.cpp  fork.cpp  grub.cfg  hardware.cpp  init.cpp  initrd.asm  irq.cpp  kargs.cpp  kctl.cpp  kernel.ld  kmalloc.cpp  kshell.cpp  lock.cpp  main.cpp  math.cpp  mem.cpp  mm.cpp  module.cpp  paging.cpp  phys.cpp  pit.cpp  proc.cpp  proc_group.cpp  process.cpp  profile.cpp  rcu.cpp  sched.cpp  scheduler.cpp  sem.cpp  (+17 more)
kernel/dev/: DeviceNode.cpp  RTC.cpp  VideoDevice.cpp  blk_cache.cpp  char_dev.cpp  device.cpp  disk.cpp  driver.cpp  mbr.cpp  partition.cpp  pci.cpp  serial.cpp  video.cpp
kernel/elf/: loader.cpp
kernel/fs/: DeviceNode.cpp  File.cpp  Node.cpp  console.cpp  devfs.cpp  fifo_buf.cpp  file.cpp  filesystem.cpp  fs.cpp  getcwd.cpp  pipe.cpp  vfs.cpp
kernel/include/: asm.h  cppglue.h  device.h  func.h  idt.h  liballoc.h  mem.h  module.h  paging.h  pci.h  phys.h  pit.h  posix.h  printk.h  ptr.h  string.h  types.h  vec.h
kernel/lib/: aes.cpp  cal.cpp  ck.cpp  cppglue.cpp  liballoc_1_1.cpp  liballoc_1_1.h  lock.cpp  math.cpp  md5.cpp  miniz.cpp  printf.cpp  printk.cpp  rbtree.cpp  sha1.cpp  string.cpp  tinyubsan.cpp  util.cpp
kernel/mm/: area.cpp  buddy.cpp  mm.cpp  mshare.cpp  page.cpp  pagetable.cpp  space.cpp
kernel/sched/: core.cpp  internal.h  round_robin.cpp
kernel/src/: ata.asm  boot.ao  boot.c  cppglue.cpp  device.cpp  idt.c  idt.cpp  low_paging.c  main.cpp  mem.c  mem.cpp  mm.cpp  paging.c  paging.cpp  palloc.c  pci.c  pci.cpp  phys.cpp  pit.c  pit.cpp  posix.c  posix.cpp  printk.c  printk.cpp  serial.c  serial.cpp  string.cpp  util.asm
kernel/syscall/: chdir.cpp  close.cpp  cmdve.cpp  dirent.cpp  dup.cpp  exec.cpp  exit.cpp  ioctl.cpp  lseek.cpp  mmap.cpp  open.cpp  pctl.cpp  read.cpp  signal.cpp  spawn.cpp  startpid.cpp  stat.cpp  sysinfo.cpp  time.cpp  user.cpp  waitpid.cpp  write.cpp
kernel/syscalls/: chdir.cpp  chroot.cpp  close.cpp  core.cpp  dirent.cpp  dup.cpp  exec.cpp  ioctl.cpp  lseek.cpp  mmap.cpp  open.cpp  read.cpp  signal.cpp  stat.cpp  sysinfo.cpp  time.cpp  unlink.cpp  user.cpp  waitpid.cpp  write.cpp  yield.cpp
kernel/tools/: vectors.py
lib/: CMakeLists.txt
lib/c++/: .gitignore
lib/ck/: CMakeLists.txt
lib/gfx/: CMakeLists.txt  bitmap.cpp  disjoint_rects.cpp  font.cpp  image.cpp  png.cpp  rect.cpp  scribe.cpp  stackblur.cpp  stb_image.h
lib/js/: CMakeLists.txt  js.c
lib/libcxxrt/: CMakeLists.txt
lib/linenoise/: CMakeLists.txt
lib/lumen/: main.cpp
lib/m/: __rem_pio2.c  exp_data.c  exp_data.h  internal.h  libm.c  pow.c
lib/miniz/: CMakeLists.txt  miniz.c
lib/scm/: CMakeLists.txt
lib/shared_test/: CMakeLists.txt  shared_bin.c  shared_test.c
lib/tree_sitter/: CMakeLists.txt
lib/ui/: application.cpp  boxlayout.cpp  frame.cpp  label.cpp  layout.cpp  lumen.cpp  stackview.cpp  surface.cpp  view.cpp  window.cpp
lib/vterm/: CMakeLists.txt
lib/wasm/: CMakeLists.txt
lib/wren/: CMakeLists.txt
lib/zip/: CMakeLists.txt  miniz.h  zip.c
libc/: CMakeLists.txt  crt0.asm  dumb_gloss.c
libc/crt0/: crt0.riscv.S  crt0.x86.asm
libc/cxxrt/: atomic.h  cxxabi.h  exception.cc  unwind-arm.h  unwind.h
libc/include/: atomic.h  dlfcn.h  err.h  errno.h  fcntl.h  ftw.h  inttypes.h  lumen.h  malloc.h  math.h  pthread.h  regex.h  setjmp.h  stdalign.h  stdarg.h  stdbool.h  stdio.h  stdlib.h  string.h  strings.h  termios.h  time.h  wctype.h  zip.h
libc/src/: alpha.h  assert.c  atexit.c  collate.h  dirent.c  dlfcn.c  emx.c  err.c  exit.c  fcntl.c  ftw.c  ioctl.c  lib.c  pthread.c  pthread_barrier.c  pthread_mutex.c  pwd.c  regcomp.c  regerror.c  regex.c  regex_engine.h  regex_internal.h  sched.c  setjmp.asm  signal.c  socket.c  stack_chk_fail.c  stat.c  sysbind.c  syscall.c  termios.c  time.c  unistd.c  wait.c  wctype.c
user/: CMakeLists.txt  Makefile  build.sh  crt0.asm  hello  hello.asm  init  init.asm  make_prog.sh  patch.sh  test  test.c  user.ld
user/ideas/: widget.c
user/include/: chariot.h  errno.h  fcntl.h  limits.h  locale.h  lumen.h  math.h  pthread.h  signal.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
user/rs/: Cargo.toml  Makefile  Xargo.toml  chariot-x86_64.json  rsrt0.asm  rust.ld
usr.bin/: CMakeLists.txt
usr.bin/bf/: CMakeLists.txt  Makefile  x86.h
usr.bin/cal/: cal.c
usr.bin/cat/: lib.rs
(+1805 files in other folders)
